@@ -18,6 +18,7 @@ package org.openrewrite.gradle;
 import lombok.EqualsAndHashCode;
 import lombok.Value;
 import org.jspecify.annotations.Nullable;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -29,6 +30,7 @@ import java.util.List;
 
 import static org.openrewrite.gradle.Assertions.*;
 import static org.openrewrite.gradle.toolingapi.Assertions.withToolingApi;
+import static org.openrewrite.properties.Assertions.properties;
 
 class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
 
@@ -121,7 +123,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
             spec.recipe(new UpgradeTransitiveDependencyVersion(
               "com.thoughtworks.xstream", "xstream", "1.4.21", null, null, null)),
           buildGradle(
-            String.format("""
+            """
               plugins {
                   id 'java'
               }
@@ -136,8 +138,8 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               dependencies {
                   %1$s 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
               }
-              """, configurationName),
-            String.format("""
+              """.formatted(configurationName),
+            """
               plugins {
                   id 'java'
               }
@@ -152,7 +154,7 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
               dependencies {
                   %1$s 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:4.2.0'
               }
-              """, configurationName)
+              """.formatted(configurationName)
           )
         );
     }
@@ -400,6 +402,188 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         );
     }
 
+    @Disabled("String interpolation with inline properties is not yet supported")
+    @Test
+    void updateConstraintGStringInterpolation() {
+        rewriteRun(
+          buildGradle(
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              
+              def jacksonVersion = "2.12.0"
+              
+              dependencies {
+                  constraints {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
+                          because 'some reason'
+                      }
+                  }
+              
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """,
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              
+              def jacksonVersion = "2.12.5"
+              
+              dependencies {
+                  constraints {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
+                          because 'CVE-2024-BAD'
+                      }
+                  }
+              
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void updateConstraintInPropertiesFile() {
+        rewriteRun(
+          properties(
+            """
+              jacksonVersion=2.12.0
+              """,
+            """
+              jacksonVersion=2.12.5
+              """,
+            spec -> spec.path("gradle.properties")
+          ),
+          buildGradle(
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
+                          because 'some reason'
+                      }
+                  }
+              
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """,
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
+                          because 'CVE-2024-BAD'
+                      }
+                  }
+              
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void updateConstraintInPropertiesFileMapNotation() {
+        rewriteRun(
+          properties(
+            """
+              jacksonVersion=2.12.0
+              """,
+            """
+              jacksonVersion=2.12.5
+              """,
+            spec -> spec.path("gradle.properties")
+          ),
+          buildGradle(
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonVersion, {
+                          because 'some reason'
+                      }
+                  }
+              
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """,
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      implementation group: "com.fasterxml.jackson.core", name: "jackson-core", version: jacksonVersion, {
+                          because 'CVE-2024-BAD'
+                      }
+                  }
+              
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void kotlinDslUpdateConstraintInPropertiesFile() {
+        rewriteRun(
+          properties(
+            """
+              jacksonVersion=2.12.0
+              """,
+            """
+              jacksonVersion=2.12.5
+              """,
+            spec -> spec.path("gradle.properties")
+          ),
+          buildGradleKts(
+            """
+              plugins {
+                `java-library`
+              }
+              repositories { mavenCentral() }
+              
+              val jacksonVersion: String by project
+              dependencies {
+                  constraints {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
+                          because("some reason")
+                      }
+                  }
+              
+                  implementation("org.openrewrite:rewrite-java:7.0.0")
+              }
+              """,
+            """
+              plugins {
+                `java-library`
+              }
+              repositories { mavenCentral() }
+              
+              val jacksonVersion: String by project
+              dependencies {
+                  constraints {
+                      implementation("com.fasterxml.jackson.core:jackson-core:$jacksonVersion") {
+                          because("CVE-2024-BAD")
+                      }
+                  }
+              
+                  implementation("org.openrewrite:rewrite-java:7.0.0")
+              }
+              """
+          )
+        );
+    }
+
     @Test
     void updateConstraintAddingBecause() {
         rewriteRun(
@@ -594,8 +778,8 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Test
     @Issue("https://github.com/openrewrite/rewrite/issues/4228")
+    @Test
     void constraintDoesNotGetAddedInsideConstraint() {
         rewriteRun(
           spec -> spec
@@ -890,118 +1074,6 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
     }
 
     @Test
-    void addConstraintUpdatesLockfile() {
-        rewriteRun(
-          buildGradle(
-            """
-              plugins {
-                id 'java'
-              }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  implementation 'org.openrewrite:rewrite-java:7.0.0'
-              }
-              """,
-            """
-              plugins {
-                id 'java'
-              }
-              repositories { mavenCentral() }
-              
-              dependencies {
-                  constraints {
-                      implementation('com.fasterxml.jackson.core:jackson-core:2.12.5') {
-                          because 'CVE-2024-BAD'
-                      }
-                  }
-              
-                  implementation 'org.openrewrite:rewrite-java:7.0.0'
-              }
-              """
-          ),
-          lockfile(
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-kotlin:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.12.2=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.ibm.icu:icu4j:61.1=runtimeClasspath,testRuntimeClasspath
-              commons-lang:commons-lang:2.6=runtimeClasspath,testRuntimeClasspath
-              io.github.classgraph:classgraph:4.8.102=runtimeClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-core:1.6.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.abego.treelayout:org.abego.treelayout.core:1.0.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:ST4:4.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr-runtime:3.5.2=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4-runtime:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.glassfish:javax.json:1.0.4=runtimeClasspath,testRuntimeClasspath
-              org.hdrhistogram:HdrHistogram:2.1.12=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-reflect:1.4.21=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-common:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains:annotations:20.1.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.latencyutils:LatencyUtils:2.0.3=runtimeClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-core:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-java:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-analysis:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-tree:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-util:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm:9.1=runtimeClasspath,testRuntimeClasspath
-              org.yaml:snakeyaml:1.28=runtimeClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """,
-            """
-              # This is a Gradle generated file for dependency locking.
-              # Manual edits can break the build and are not advised.
-              # This file is expected to be part of source control.
-              com.fasterxml.jackson.core:jackson-annotations:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-core:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.core:jackson-databind:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.dataformat:jackson-dataformat-smile:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-kotlin:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson.module:jackson-module-parameter-names:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.fasterxml.jackson:jackson-bom:2.12.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              com.ibm.icu:icu4j:61.1=runtimeClasspath,testRuntimeClasspath
-              commons-lang:commons-lang:2.6=runtimeClasspath,testRuntimeClasspath
-              io.github.classgraph:classgraph:4.8.102=runtimeClasspath,testRuntimeClasspath
-              io.micrometer:micrometer-core:1.6.5=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.abego.treelayout:org.abego.treelayout.core:1.0.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:ST4:4.3=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr-runtime:3.5.2=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4-runtime:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.antlr:antlr4:4.8-1=runtimeClasspath,testRuntimeClasspath
-              org.glassfish:javax.json:1.0.4=runtimeClasspath,testRuntimeClasspath
-              org.hdrhistogram:HdrHistogram:2.1.12=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-reflect:1.4.21=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-common:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains.kotlin:kotlin-stdlib:1.4.31=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.jetbrains:annotations:20.1.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.latencyutils:LatencyUtils:2.0.3=runtimeClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-core:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.openrewrite:rewrite-java:7.0.0=compileClasspath,runtimeClasspath,testCompileClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-analysis:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-tree:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm-util:9.1=runtimeClasspath,testRuntimeClasspath
-              org.ow2.asm:asm:9.1=runtimeClasspath,testRuntimeClasspath
-              org.yaml:snakeyaml:1.28=runtimeClasspath,testRuntimeClasspath
-              empty=annotationProcessor,testAnnotationProcessor
-              """
-          )
-        );
-    }
-
-    @Test
     void canHandleNullScannedAccumulator() {
         UpgradeTransitiveDependencyVersion updateClassgraph = new UpgradeTransitiveDependencyVersion("io.github.classgraph", "classgraph", "4.8.112", null, null, null);
         UpgradeTransitiveDependencyVersion updateJackson = new UpgradeTransitiveDependencyVersion("com.fasterxml*", "jackson-core", "2.12.5", null, "CVE-2024-BAD", null);
@@ -1073,8 +1145,147 @@ class UpgradeTransitiveDependencyVersionTest implements RewriteTest {
         );
     }
 
-    @Value
+    @Test
+    void doesNotAddRedundantConstraintWhenImplementationAlreadyHasIt() {
+        rewriteRun(
+          spec -> spec
+            .recipe(new UpgradeTransitiveDependencyVersion(
+              "com.fasterxml.jackson.core", "jackson-databind", "2.12.5", null, null, List.of("testImplementation"))),
+          buildGradle(
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void replacesTestImplementationConstraintWithImplementation() {
+        rewriteRun(
+          spec -> spec
+            .recipe(new UpgradeTransitiveDependencyVersion(
+              "com.fasterxml.jackson.core", "jackson-databind", "2.12.5", null, null, null)),
+          buildGradle(
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+              }
+              """,
+            """
+              plugins {
+                  id 'java'
+              }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      implementation('com.fasterxml.jackson.core:jackson-databind:2.12.5')
+                  }
+
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+                  testImplementation 'org.junit.jupiter:junit-jupiter:5.9.0'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void updateConstraintForVersionInSettings() {
+        rewriteRun(
+          buildGradle(
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}") {
+                          because 'some reason'
+                      }
+                  }
+              
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """,
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+              
+              dependencies {
+                  constraints {
+                      implementation("com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}") {
+                          because 'CVE-2024-BAD'
+                      }
+                  }
+              
+                  implementation 'org.openrewrite:rewrite-java:7.0.0'
+              }
+              """
+          ),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jacksonVersion = '2.12.0'
+              }
+              """,
+            """
+              gradle.ext {
+                  jacksonVersion = '2.12.5'
+              }
+              """
+          )
+        );
+    }
+
+    @Test
+    void noChangesIfDependencyIsAlsoPresentOnProjectForVersionInSettings() {
+        rewriteRun(
+          buildGradle(
+            """
+              plugins { id 'java' }
+              repositories { mavenCentral() }
+    
+              dependencies {
+                  implementation "com.fasterxml.jackson.core:jackson-core:${gradle.jacksonVersion}"
+                  implementation "com.fasterxml.jackson.core:jackson-databind:${gradle.jacksonVersion}"
+              }
+              """
+          ),
+          settingsGradle(
+            """
+              gradle.ext {
+                  jacksonVersion = '2.12.0'
+              }
+              """
+          )
+        );
+    }
+
     @EqualsAndHashCode(callSuper = false)
+    @Value
     public static class ScanningAccumulatedUpgradeRecipe extends ScanningRecipe<UpgradeTransitiveDependencyVersion.DependencyVersionState> {
         @Override
         public String getDisplayName() {
